🐛 fix(minor): feat dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -409,7 +409,7 @@
     --bg-sub-background:38 39 47;
     --bg-btn-background: 38 39 47;
     --bg-border-decoration: #9b9b9b26;
-    --svg-color: #00000036;
+    --svg-color: #3b3b3b;
     --svg-fill-color: #75757536;
     --p: #e6811d66
     --svg-color-doit: #d3d3d336;
